[project]
name = "sopht"
version = "0.0.1"
description = "Scalable One-stop Platform for Hydroelastic Things (SOPHT)"
readme = "README.md"
authors = [
    {name = "Yashraj Bhosale", email = "bhosale2@illinois.edu"},
    {name = "Arman Tekinalp", email = "armant2@illinois.edu"},
    {name = "Songyuan Cui", email = "cui20@illinois.edu"}
]
maintainers = [
    {name = "Songyuan Cui", email = "cui20@illinois.edu"}
]
license = "MIT"
requires-python = ">=3.10, <3.14"
dependencies = [
    "numpy",
    "scipy",
    "numba",
    "sympy",
    "h5py",
    "pyelastica",
    "matplotlib",
    "pyfftw",
    "pystencils"
]

[project.urls]
Homepage = "https://github.com/SophT-Team/SophT"
Repository = "https://github.com/SophT-Team/SophT.git"
Issues = "https://github.com/SophT-Team/SophT/issues"

[project.optional-dependencies]
examples = [
    "click",
    # "coomm",
    "magneto_pyelastica"
]

# https://hatch.pypa.io/latest/config/build/#build-system
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# https://docs.astral.sh/uv/concepts/projects/dependencies/#development-dependencies
[dependency-groups]
tests = [
    "pytest",
    "coverage",
    "pytest-cov",
    "mypy",
    "psutil", 
]
lint = [
    "ruff"
]
dev = [
    "pre-commit",
]

[tool.uv]
default-groups = "all"

# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "NPY",      # Some numpy-specific things
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
python_version = "3.10"
pretty = true
show_traceback = true
color_output = true
check_untyped_defs = false
ignore_missing_imports = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

# https://docs.pytest.org/en/stable/reference/customize.html
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
